# rb-ndarray

./: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  ndarray.gemspec
lib/: ndarray.rb
lib/ndarray/: version.rb
spec/: ndarray_spec.rb  spec_helper.rb
src/: adapter.rs  lib.rs
